--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
             style="
               height: 100%;
               width: 100%;
+              overflow: hidden;
               margin-right: 0px;
               z-index: 1;
               object-fit: contain;
