--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
           box-shadow: 0px 0px 0px rgb(0, 0, 0);
         "
       >
-        <div id="wall2" style="position: relative; left: 20%; top:0px">
+        <div id="wall2" style="position: relative; top:0px">
           <img
             src="media/card wallpaper.jpg"
             alt=""
