--- a/EM/What_is_infinity.html
+++ b/EM/What_is_infinity.html
@@ -98,7 +98,7 @@
             <div>
                 <picture>
                     <source srcset="WhatIsInfinity2.jpg" media="(min-width: 1400px)">
-                    <img src="WhatIsInfinity1.jpg" alt="Some picture" style="z-index: 1; height: max-content; width: 100%; opacity: 1; object-fit: cover;">
+                    <img src="WhatIsInfinity1.jpg" alt="Some picture" style="z-index: 1; height: max-content; width: 100%; opacity: 1; object-fit: contain;">
                 </picture>
             </div>
         </div>
