--- a/EM/What_is_infinity.html
+++ b/EM/What_is_infinity.html
@@ -98,7 +98,7 @@
             <div>
                 <picture>
                     <source srcset="WhatIsInfinity1.jpg" media="(max-width: 1400px)">
-                    <img src="WhatIsInfinity2.jpg" alt="Some picture" style="margin: 0px; position: relative; top: 0px; z-index: 1; height: min-content; width: 100%; opacity: 1; object-fit: cover;">
+                    <img src="WhatIsInfinity2.jpg" alt="Some picture" style="margin: 0px; position: relative; top: 0px; z-index: 1; height: min-content; width: 100%; opacity: 1; object-fit: fill;">
                 </picture>
             </div>
         </div>
