--- a/EM/What_is_infinity.html
+++ b/EM/What_is_infinity.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scaleble=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>What is infinity?</title>
     </head>
     <body  style="display: block; margin: 0%;">
@@ -98,7 +98,7 @@
             <div>
                 <picture>
                     <source srcset="WhatIsInfinity1.jpg" media="(max-width: 1400px)">
-                    <img src="WhatIsInfinity2.jpg" alt="Some picture" style="margin: 0px; position: relative; top: 0px; z-index: 1; height: min-content; width: 100%; opacity: 1; object-fit: fill;">
+                    <img src="WhatIsInfinity2.jpg" alt="Some picture" style="margin: 0px; position: static; top: 0px; z-index: 1; height: min-content; width: 100%; opacity: 1; object-fit: fill;">
                 </picture>
             </div>
         </div>
