file viewed as only pdf, extra web page removed

--- a/EM/EM.html
+++ b/EM/EM.html
@@ -103,7 +103,7 @@
               width: 100%;
               z-index: 1;
               object-fit: cover;
-              opacity: 0.6;
+              opacity: 0.9;
             "
           ></video>
           <div
@@ -114,7 +114,7 @@
               left: 0;
               width: 100%;
               height: 100%;
-              background-color: rgba(4, 4, 4, 0.329);
+              background-color: rgba(4, 4, 4, 0.664);
               mix-blend-mode: overlay;
             "
           ></div>
@@ -414,7 +414,7 @@
               margin: 0px;
               overflow: hidden;
               text-align: center;
-              width: 90%;
+              width: 80%;
               cursor: pointer;
               font-family: KoHo;
               font-size: 3.4vmin;
@@ -425,13 +425,13 @@
               color: #06c;
             "
           >
-            <p>How big are infinities? Are some infinities bigger than others? How do a plane and a line have the same numbers of points on them? Why are there more real numbers than natural numbers? We will find answers to these questions and dive into the ocean of infinite different infinities.</p>
+            <p>How big are infinities? Why are some infinities bigger than others? Are there more real numbers than natural numbers? How do a plane and a line have the same numbers of points on them? We will find answers to these questions and dive into the ocean of infinite different infinities.</p>
           </div>
           <div
             id="diveIn2"
             viewButton="buttonhover(event,250,9)"
             viewButton="buttonout(event,250,9)"
-            onclick="window.open('What_is_infinity.html')"
+            onclick="window.open('What_is_infinity.pdf')"
             style="
               margin: 0px;
               overflow: hidden;
