--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
             <div
               id="diveInM2"
-              onclick="window.open('https://www.instagram.com/_ashutosh_shinde/')"
+              onclick="window.open('https://www.instagram.com/ashutoshpshinde?igsh=MTZieDZjZDFrZ2Jrdw==')"
               style="
                 margin: 0px;
                 overflow: hidden;
