wild-math branch initiate

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="A collection experiments and projects related to math, physics and computer science"
+      content="A collection projects and blogs related to mathematics, wildlife conservation and computer science"
     />
     <meta
       name="keywords"
-      content="Machine Learning, Python, Q learning, Conways Game of Life, Chaos, Fractals"
+      content="Machine Learning, Python, learning, wildlife conservation"
     />
     <meta name="author" content="ashutosh shinde" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -266,24 +266,7 @@
               </div>
             </div>
           </div>
-          <div
-            id="TitleText"
-            style="
-              margin: 0px;
-              overflow: hidden;
-              text-align: center;
-              font-family: Raleway;
-              font-weight: lighter;
-              font-size: 10vmin;
-              transform: translate(-50%, -40%);
-              left: 50%;
-              top: 40%;
-              position: relative;
-              color: hsla(190, 100%, 100%, 1);
-            "
-          >
-            &Rho; &Alpha; &Upsilon; &#945; &#951;
-          </div>
+          <!-- Title removed per request -->
 
           <div
             id="DescriptionText"
@@ -291,7 +274,7 @@
               margin: 0px;
               overflow: hidden;
               text-align: center;
-               width: 68%;
+              width: 68%;
               font-family: McLaren;
               font-size: 2.8vmin;
               transform: translate(-50%, -50%);
@@ -301,9 +284,11 @@
               color: hsla(185, 100%, 100%, 1);
             "
           >
-            <p>Hi. I'm Ashutosh Shinde. It's my personal page. Here you will find some cool mathematical stuff, my&nbspprojects, blogs and poems.</p>
-           
-            
+            <div style="text-align: center;">
+              <h1 style="margin: 0; font-family: McLaren; font-size: 4vmin;">Some Curious Explorations</h1>
+              <h2 style="margin: 0; font-family: KoHo; font-weight: 400; font-size: 2.6vmin;">in Mathematics and Wildlife</h2>
+              <p style="margin-top: 1vmin; font-family: Calibri; font-size: 1.8vmin;">by Ashutosh Shinde</p>
+            </div>
           </div>
           <div
             id="contactdetails"
