--- a/index.html
+++ b/index.html
@@ -96,6 +96,35 @@
         color: cyan;
       }
     </style>
+    <style>
+      /* Responsive tweaks for small screens: override inline styles with !important */
+      @media (max-width: 600px) {
+        #DescriptionText { width: 92% !important; }
+        #DescriptionText h1 {
+          font-size: 10vw !important;
+          line-height: 1.12 !important;
+          margin: 0 0 1.0vmin 0 !important;
+          letter-spacing: 0.01em !important;
+        }
+        #DescriptionText h2 {
+          font-size: 4.6vw !important;
+          line-height: 1.2 !important;
+          margin-top: 1.0vmin !important;
+        }
+        #DescriptionText p {
+          font-size: 3.4vw !important;
+          line-height: 1.4 !important;
+          margin-top: 1.2vmin !important;
+        }
+        #contactdetails { font-size: 3.6vw !important; top: 64% !important; }
+      }
+      @media (max-width: 400px) {
+        #DescriptionText h1 { font-size: 12.5vw !important; }
+        #DescriptionText h2 { font-size: 6.0vw !important; }
+        #DescriptionText p  { font-size: 4.6vw !important; }
+        #contactdetails { font-size: 4.2vw !important; top: 66% !important; }
+      }
+    </style>
   </head>
   <body style="margin: 0px; display: block">
     <div
@@ -285,9 +314,9 @@
             "
           >
             <div style="text-align: center;">
-              <h1 style="margin: 0; font-family: McLaren; font-size: 4vmin;">Some Curious Explorations</h1>
-              <h2 style="margin: 0; font-family: KoHo; font-weight: 400; font-size: 2.6vmin;">in Mathematics and Wildlife</h2>
-              <p style="margin-top: 1vmin; font-family: Calibri; font-size: 1.8vmin;">by Ashutosh Shinde</p>
+              <h1 style="margin: 0 0 1.2vmin 0; font-family: McLaren; font-size: 7vmin; line-height: 1.25; letter-spacing: 0.02em;">Some Curious Explorations</h1>
+              <h2 style="margin: 0; font-family: KoHo; font-weight: 400; font-size: 3.6vmin; line-height: 1.3; margin-top: 1.2vmin;">in Mathematics and Wildlife</h2>
+              <p style="margin-top: 1.6vmin; font-family: Calibri; font-size: 2.4vmin; line-height: 1.6; opacity: 0.95;">by Ashutosh Shinde</p>
             </div>
           </div>
           <div
