--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Payan</title>
+    <title>WildQuant</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link
       href="https://fonts.googleapis.com/css?family=Alegreya Sans SC"
@@ -862,238 +862,6 @@
           >
             <div
               id="diveInText4"
-              style="
-                margin: 0px;
-                overflow: hidden;
-                text-align: center;
-                font-family: KoHo;
-                font-size: 2.5vh;
-                transform: translate(-50%, -50%);
-                left: 50%;
-                top: 50%;
-                position: relative;
-                color: hsla(185, 100%, 100%, 1);
-              "
-            >
-              VIEW
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="slide3" style="z-index: 1; position: relative">
-        <div
-          id="maintitle"
-          height="100%"
-          width="100%"
-          style="
-            z-index: 1;
-            position: relative;
-            overflow: hidden;
-            height: 70%;
-            background-color: black;
-          "
-        >
-          <div
-            id="slide1Texts"
-            style="
-              margin: 0px;
-              width: 100%;
-              height: 100%;
-              overflow: hidden;
-              background: rgba(0, 0, 0, 0);
-              cursor: auto;
-              position: absolute;
-              top: 0px;
-              z-index: 7;
-              opacity: 1;
-            "
-          >
-            <div
-              id="TitleText3"
-              style="
-                margin: 0px;
-                overflow: hidden;
-                text-align: center;
-                font-family: Calibri;
-                font-weight: lighter;
-                font-size: 8vmin;
-                transform: translate(-50%, -50%);
-                left: 50%;
-                top: 50%;
-                position: relative;
-                color: hsla(185, 100%, 100%, 1);
-              "
-            >
-              प्रेक्षित
-            </div>
-            <div
-              id="DescriptionText3"
-              style="
-                margin: 0px;
-                overflow: hidden;
-                text-align: center;
-                cursor: pointer;
-                font-family: KoHo;
-                font-size: 3.4vmin;
-                transform: translate(-50%, -30%);
-                left: 50%;
-                top: 50%;
-                position: relative;
-                color: #2997ff;
-              "
-            >
-              लेखसंग्रह (My Marathi Blogs)
-            </div>
-            <div
-              id="diveIn3"
-              viewButton="buttonhover(event,250,9)"
-              viewButton="buttonout(event,250,9)"
-              onclick="window.open('https://ashutosh-shinde.github.io/')"
-              style="
-                margin: 0px;
-                overflow: hidden;
-                transform: translate(-50%, -50%);
-                left: 50%;
-                top: 65%;
-                position: relative;
-                transition: background 0.5s;
-                background: rgba(9, 143, 158, 0.529);
-                width: 10vmax;
-                height: 5.5vh;
-                border-color: rgb(0, 0, 0);
-                cursor: pointer;
-                z-index: 10;
-              "
-            >
-              <div
-                id="diveInText3"
-                style="
-                  margin: 0px;
-                  overflow: hidden;
-                  text-align: center;
-                  font-family: KoHo;
-                  font-size: 2.5vh;
-                  transform: translate(-50%, -50%);
-                  left: 50%;
-                  top: 50%;
-                  position: relative;
-                  color: hsla(185, 100%, 100%, 1);
-                "
-              >
-                VIEW
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div
-        id="slide3"
-        style="
-          z-index: 1;
-          position: relative;
-          box-shadow: 0px -20px -100px rgb(0, 0, 0);
-        "
-      >
-        <div id="wall2">
-          <img
-            src="media/wp3269153.jpg"
-            alt=""
-            style="
-              height: 100%;
-              width: 100%;
-              z-index: 1;
-              object-fit: cover;
-              object-position: top;
-              opacity: 1;
-            "
-          />
-          <div
-            id="overlay"
-            style="
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              background-color: rgb(0, 0, 0);
-              mix-blend-mode: overlay;
-            "
-          ></div>
-        </div>
-        <div
-          id="slide1Texts"
-          style="
-            margin: 0px;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            background: rgba(255, 255, 255, 0);
-            cursor: auto;
-            position: absolute;
-            top: 0px;
-            z-index: 7;
-            opacity: 1;
-          "
-        >
-          <div
-            id="TitleText3"
-            style="
-              margin: 0px;
-              overflow: hidden;
-              text-align: center;
-              font-family: Calibri;
-              font-weight: lighter;
-              font-size: 8vmin;
-              transform: translate(-50%, -50%);
-              left: 50%;
-              top: 50%;
-              position: relative;
-              color: hsla(185, 10%, 100%, 1);
-            "
-          >
-            पायण
-          </div>
-          <div
-            id="DescriptionText3"
-            style="
-              margin: 0px;
-              overflow: hidden;
-              text-align: center;
-              cursor: pointer;
-              font-family: KoHo;
-              font-size: 3.4vmin;
-              transform: translate(-50%, -30%);
-              left: 50%;
-              top: 50%;
-              position: relative;
-              color: #06c;
-            "
-          >
-            My Marathi Poems
-          </div>
-          <div
-            id="diveIn3"
-            viewButton="buttonhover(event,250,9)"
-            viewButton="buttonout(event,250,9)"
-            onclick="window.open('https://ashutosh-shinde.github.io/')"
-            style="
-              margin: 0px;
-              overflow: hidden;
-              transform: translate(-50%, -50%);
-              left: 50%;
-              top: 60%;
-              position: relative;
-              transition: background 0.5s;
-              background: rgba(9, 143, 158, 0.529);
-              width: 10vmax;
-              height: 5.5vh;
-              border-color: rgb(0, 0, 0);
-              cursor: pointer;
-              z-index: 10;
-            "
-          >
-            <div
-              id="diveInText3"
               style="
                 margin: 0px;
                 overflow: hidden;
