game page with a chord game

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                 color: rgb(255, 255, 255);
               "
             >
-              Puzzles and Paradoxes
+              Strategic Intelligence Lab
             </div>
             <div
               id="DescriptionText3"
