add link to SIL

--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
               id="diveIn3"
               viewButton="buttonhover(event,250,9)"
               viewButton="buttonout(event,250,9)"
-              onclick="window.open('https://ashutosh-shinde.github.io/')"
+              onclick="window.open('SIL/SILindex01.html')"
               style="
                 margin: 0px;
                 overflow: hidden;
