--- a/SIL/SILindex01.html
+++ b/SIL/SILindex01.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Strategic Intelligence Lab</title>
-  <meta name="viewport" content="width=device-width, initial-scale=0.6" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
     * {
@@ -109,6 +109,201 @@
       margin-top: 1.2rem;
       opacity: 0.4;
       font-size: 0.75rem;
+    }
+
+    /* ==================== RESPONSIVE DESIGN ==================== */
+    
+    /* Tablets and larger screens (landscape) */
+    @media (max-width: 1024px) {
+      .panel {
+        max-height: 80vh;
+        padding: 2rem;
+      }
+      h1 {
+        font-size: clamp(1.8rem, 3vw, 2.5rem);
+      }
+    }
+
+    /* Large tablets and small desktops */
+    @media (max-width: 768px) {
+      .container {
+        padding: 1.5rem;
+      }
+      .panel {
+        max-height: 85vh;
+        padding: 2rem;
+        border-radius: 16px;
+      }
+      h1 {
+        font-size: clamp(1.6rem, 4vw, 2.2rem);
+      }
+      .tagline {
+        font-size: 0.9rem;
+      }
+      .entry h2 {
+        font-size: 1.1rem;
+      }
+      .entry p {
+        font-size: 0.85rem;
+      }
+    }
+
+    /* Landscape tablets and small tablets */
+    @media (max-width: 600px) {
+      .container {
+        padding: 1rem;
+      }
+      .panel {
+        max-height: 90vh;
+        padding: 1.5rem;
+        border-radius: 14px;
+      }
+      h1 {
+        font-size: clamp(1.4rem, 5.5vw, 2rem);
+        letter-spacing: 0.08em;
+      }
+      .tagline {
+        font-size: 0.85rem;
+        margin-top: 0.6rem;
+      }
+      .index {
+        margin-top: 1.5rem;
+        gap: 1rem;
+      }
+      .entry {
+        padding: 1rem 1.2rem;
+        border-radius: 10px;
+      }
+      .entry h2 {
+        font-size: 1rem;
+        margin-bottom: 0.2rem;
+      }
+      .entry p {
+        font-size: 0.8rem;
+      }
+      footer {
+        margin-top: 1rem;
+        font-size: 0.7rem;
+      }
+    }
+
+    /* Small phones (480px and below) */
+    @media (max-width: 480px) {
+      .container {
+        padding: 0.75rem;
+      }
+      .panel {
+        max-height: 92vh;
+        padding: 1.2rem;
+        border-radius: 12px;
+      }
+      h1 {
+        font-size: clamp(1.2rem, 6vw, 1.8rem);
+        letter-spacing: 0.06em;
+      }
+      .tagline {
+        font-size: 0.8rem;
+        margin-top: 0.5rem;
+      }
+      .index {
+        margin-top: 1.2rem;
+        gap: 0.8rem;
+      }
+      .entry {
+        padding: 0.9rem 1rem;
+        border-radius: 8px;
+      }
+      .entry h2 {
+        font-size: 0.95rem;
+        margin-bottom: 0.15rem;
+      }
+      .entry p {
+        font-size: 0.75rem;
+      }
+      footer {
+        margin-top: 0.8rem;
+        font-size: 0.65rem;
+      }
+    }
+
+    /* Very small phones (360px and below) */
+    @media (max-width: 360px) {
+      .container {
+        padding: 0.5rem;
+      }
+      .panel {
+        max-height: 94vh;
+        padding: 1rem;
+        border-radius: 10px;
+      }
+      h1 {
+        font-size: clamp(1.1rem, 6.5vw, 1.6rem);
+        letter-spacing: 0.05em;
+      }
+      .tagline {
+        font-size: 0.75rem;
+        margin-top: 0.4rem;
+      }
+      .index {
+        margin-top: 1rem;
+        gap: 0.7rem;
+      }
+      .entry {
+        padding: 0.8rem 0.9rem;
+        border-radius: 8px;
+      }
+      .entry h2 {
+        font-size: 0.9rem;
+      }
+      .entry p {
+        font-size: 0.7rem;
+      }
+    }
+
+    /* Touch-friendly adjustments for mobile devices */
+    @media (hover: none) and (pointer: coarse) {
+      .entry {
+        padding: 1.2rem 1.4rem;
+        min-height: 44px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      .entry:active {
+        background: rgba(255, 255, 255, 0.15);
+      }
+    }
+
+    /* Orientation specific adjustments */
+    @media (orientation: landscape) and (max-height: 500px) {
+      .container {
+        padding: 0.75rem;
+      }
+      .panel {
+        max-height: 95vh;
+        padding: 1rem;
+      }
+      h1 {
+        font-size: clamp(1rem, 4vh, 1.5rem);
+      }
+      .tagline {
+        font-size: 0.7rem;
+        margin-top: 0.3rem;
+      }
+      .index {
+        margin-top: 0.8rem;
+        gap: 0.6rem;
+      }
+      .entry {
+        padding: 0.7rem 1rem;
+      }
+      .entry h2 {
+        font-size: 0.85rem;
+        margin-bottom: 0.1rem;
+      }
+      .entry p {
+        font-size: 0.65rem;
+      }
     }
   </style>
 </head>
