--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <meta name="Referrer" content="origin" />
 
-    <link rel="icon" href="media/Wildquant.png" />
+    <link rel="icon" href="media/Wildquant.jpg" />
 
     <style type="text/css">
       a {
